[gd_scene load_steps=37 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://PlayerGreen.tscn" type="PackedScene" id=2]
[ext_resource path="res://PlayerBlue.tscn" type="PackedScene" id=3]
[ext_resource path="res://lvl1/Planks1.gd" type="Script" id=4]
[ext_resource path="res://assets/lvl1/planks-1.png" type="Texture" id=5]
[ext_resource path="res://platforms_tileset.tres" type="TileSet" id=6]
[ext_resource path="res://lvl1/Block6.gd" type="Script" id=7]
[ext_resource path="res://lvl1/Block5.gd" type="Script" id=8]
[ext_resource path="res://assets/Green tiles/tileGreen_02.png" type="Texture" id=9]
[ext_resource path="res://lvl1/spP3.gd" type="Script" id=10]
[ext_resource path="res://assets/lvl1/bg.png" type="Texture" id=11]
[ext_resource path="res://assets/lvl1/o-1.png" type="Texture" id=12]
[ext_resource path="res://assets/lvl1/p-2.png" type="Texture" id=13]
[ext_resource path="res://assets/lvl1/music.png" type="Texture" id=14]
[ext_resource path="res://assets/lvl1/p-1.png" type="Texture" id=15]
[ext_resource path="res://lvl1/spO.gd" type="Script" id=16]
[ext_resource path="res://assets/lvl1/o-2.png" type="Texture" id=17]
[ext_resource path="res://lvl1/spP2.gd" type="Script" id=18]
[ext_resource path="res://lvl-common/FallingBlock.tscn" type="PackedScene" id=19]
[ext_resource path="res://PlayerYellow.tscn" type="PackedScene" id=20]
[ext_resource path="res://lvl1/Level1.gd" type="Script" id=21]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 15 ), ExtResource( 13 ) ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 17 ) ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 15 ), ExtResource( 13 ) ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 30.8586, 30.4618 )

[sub_resource type="GDScript" id=5]
script/source = "extends Area2D


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	self.
"

[sub_resource type="CircleShape2D" id=6]
radius = 67.6276

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 28.1132, 35.7196 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 27.1434, 35.4421 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 26.8517, 37.9172 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 18.9482, 10 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 12.0702, 23.4234 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 1.5857, 0.531236 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 22.3961, 24.1921 )

[sub_resource type="CircleShape2D" id=14]

[sub_resource type="CircleShape2D" id=15]

[node name="Level1" type="Node2D"]
script = ExtResource( 21 )

[node name="BG" type="Sprite" parent="."]
position = Vector2( 988.141, 565.571 )
scale = Vector2( 223.081, 114.9 )
texture = ExtResource( 11 )

[node name="spMusic" type="Sprite" parent="."]
position = Vector2( 818.275, 359.188 )
texture = ExtResource( 14 )

[node name="spP" type="AnimatedSprite" parent="."]
position = Vector2( 710.135, 248.28 )
frames = SubResource( 1 )
script = ExtResource( 10 )

[node name="spO" type="AnimatedSprite" parent="."]
position = Vector2( 819.364, 250.923 )
frames = SubResource( 2 )
script = ExtResource( 16 )

[node name="spP2" type="AnimatedSprite" parent="."]
position = Vector2( 931.685, 252.81 )
frames = SubResource( 3 )
script = ExtResource( 18 )

[node name="Block1" type="RigidBody2D" parent="."]
position = Vector2( 388.351, 412.126 )
rotation = -0.337066
gravity_scale = 11.56
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Block1"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Block1"]
shape = SubResource( 4 )

[node name="Block7" type="RigidBody2D" parent="."]
position = Vector2( 912.2, 526.161 )
rotation = -0.337066
gravity_scale = 11.56
sleeping = true
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Block7"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Block7"]
shape = SubResource( 4 )

[node name="FallingBlock" parent="." instance=ExtResource( 19 )]
position = Vector2( 942.435, 624.794 )
rotation = -0.409616

[node name="Block8" parent="." instance=ExtResource( 19 )]
position = Vector2( 1068, 542 )
rotation = 0.354478

[node name="Block9" type="RigidBody2D" parent="."]
position = Vector2( 1542.93, 443.153 )
rotation = -0.0673659
gravity_scale = 11.56
sleeping = true
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Block9"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Block9"]
shape = SubResource( 4 )

[node name="Block10" type="RigidBody2D" parent="."]
position = Vector2( 1697.73, 420.5 )
rotation = -0.0673659
gravity_scale = 11.56
sleeping = true
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Block10"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Block10"]
shape = SubResource( 4 )

[node name="Block2" type="RigidBody2D" parent="."]
position = Vector2( 401.043, 264.892 )
rotation = -0.0779545
gravity_scale = 11.56
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Block2"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Block2"]
shape = SubResource( 4 )

[node name="Block3" type="RigidBody2D" parent="."]
position = Vector2( 340.325, 505.924 )
rotation = -0.830512
gravity_scale = 11.56
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Block3"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Block3"]
shape = SubResource( 4 )

[node name="Block4" type="RigidBody2D" parent="."]
position = Vector2( 343.896, 64.2108 )
rotation = 0.603315
gravity_scale = 11.56
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Block4"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Block4"]
shape = SubResource( 4 )

[node name="Block5" type="RigidBody2D" parent="."]
position = Vector2( 242.875, -211.915 )
rotation = 0.603315
gravity_scale = 11.56
sleeping = true
script = ExtResource( 8 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Block5"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Block5"]
shape = SubResource( 4 )

[node name="Block6" type="RigidBody2D" parent="."]
position = Vector2( 188.996, -52.5252 )
rotation = 0.603315
gravity_scale = 11.56
sleeping = true
script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Block6"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Block6"]
shape = SubResource( 4 )

[node name="PlayerGreen" parent="." instance=ExtResource( 2 )]
position = Vector2( 1820.05, 454.247 )

[node name="PlayerBlue" parent="." instance=ExtResource( 3 )]
position = Vector2( 158.774, 269.133 )

[node name="PlayerYellow" parent="." instance=ExtResource( 20 )]
position = Vector2( 137.608, 269.595 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 6 )
format = 1
tile_data = PoolIntArray( -65515, 4, 0, 21, 4, 0, 65547, 3, 0, 65549, 3, 0, 65551, 3, 0, 65557, 4, 0, 131076, 3, 0, 131079, 1, 0, 131080, 0, 0, 131081, 0, 0, 131082, 2, 0, 131093, 4, 0, 196609, 3, 0, 196629, 4, 0, 262165, 4, 0, 327681, 3, 0, 327685, 3, 0, 327701, 4, 0, 393223, 3, 0, 393237, 4, 0, 458773, 4, 0, 524309, 4, 0, 524310, 2, 0, 589826, 3, 0, 589828, 1, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 2, 0, 655360, 2, 0, 655379, 1, 0, 655380, 0, 0, 655381, 2, 0, 720908, 3, 0, 786433, 3, 0, 917504, 2, 0, 1048576, 8, 0, 1048577, 7, 0, 1048579, 5, 0, 1048581, 6, 0, 1048582, 7, 0, 1048584, 6, 0, 1048585, 7, 0, 1048588, 5, 0 )

[node name="StartBoxDrop" type="Area2D" parent="."]
script = SubResource( 5 )

[node name="CollisionDropper" type="CollisionShape2D" parent="StartBoxDrop"]
position = Vector2( 265.165, 259.508 )
shape = SubResource( 6 )

[node name="POP-Detector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="POP-Detector"]
position = Vector2( 735.085, 34.2051 )
shape = SubResource( 7 )

[node name="POP-O-Detector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="POP-O-Detector"]
position = Vector2( 865.138, 34.8194 )
shape = SubResource( 8 )

[node name="POP-P2-Detector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="POP-P2-Detector"]
position = Vector2( 992.023, 36.1863 )
shape = SubResource( 9 )

[node name="Panel" type="Panel" parent="."]
margin_right = 200.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Panel"]
anchor_right = 1.0
margin_right = 40.0
margin_bottom = 555.0
meta_underlined = false
text = "Welcome to Tru-Puz!
It's a super cool game all about 3 squares who have to SAVE MUSIC! and do stuff like jump and die and fall off things and die and SAVE MUSIC
Player 1: ADW
Player 2: <>L
Player 3: arrow keys"
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bucket" type="Area2D" parent="."]
position = Vector2( 503.431, 746.157 )
scale = Vector2( 84.2213, 11.29 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bucket"]
position = Vector2( 4.91377, 48.8744 )
shape = SubResource( 10 )

[node name="Planks1" type="RigidBody2D" parent="."]
position = Vector2( 1658.36, 530.085 )
contacts_reported = 8
contact_monitor = true
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="Planks1"]
scale = Vector2( 0.711982, 0.711982 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Planks1"]
position = Vector2( -67.5745, -3.51001 )
scale = Vector2( 5.58697, 0.807766 )
shape = SubResource( 11 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Planks1"]
position = Vector2( 62.459, -1.3349 )
rotation = 0.0921867
scale = Vector2( 46.0897, 33.4996 )
shape = SubResource( 12 )

[node name="Planks1_PinJoint2D" type="PinJoint2D" parent="."]
position = Vector2( 1788.13, 533.529 )
node_a = NodePath("../Planks1")
node_b = NodePath("../Planks1_Platform")

[node name="Planks1_Platform" type="StaticBody2D" parent="."]
position = Vector2( 1820.16, 531.85 )

[node name="Sprite" type="Sprite" parent="Planks1_Platform"]
texture = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Planks1_Platform"]
shape = SubResource( 13 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Planks1_Platform"]
position = Vector2( -20.9243, -14.5676 )
shape = SubResource( 14 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Planks1_Platform"]
position = Vector2( 19.0704, -14.5676 )
shape = SubResource( 14 )

[node name="Planks1_Spring" type="DampedSpringJoint2D" parent="."]
position = Vector2( 1646.5, 373.663 )
node_a = NodePath("../Planks1")
node_b = NodePath("../Planks1_SpringFrom")
length = 300.0

[node name="Planks1_SpringFrom" type="StaticBody2D" parent="."]
position = Vector2( 1645.33, 277.358 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Planks1_SpringFrom"]
shape = SubResource( 15 )
disabled = true
[connection signal="body_entered" from="StartBoxDrop" to="Block6" method="_on_StartBoxDrop_body_entered"]
[connection signal="body_entered" from="StartBoxDrop" to="Block5" method="_on_StartBoxDrop_body_entered"]
[connection signal="body_entered" from="POP-Detector" to="spP" method="_on_POPDetector_body_entered"]
[connection signal="body_entered" from="POP-Detector" to="." method="_on_POPDetector_body_entered"]
[connection signal="body_exited" from="POP-Detector" to="spP" method="_on_POPDetector_body_exited"]
[connection signal="body_exited" from="POP-Detector" to="." method="_on_POPDetector_body_exited"]
[connection signal="body_entered" from="POP-O-Detector" to="spO" method="_on_POPODetector_body_entered"]
[connection signal="body_entered" from="POP-O-Detector" to="." method="_on_POPODetector_body_entered"]
[connection signal="body_exited" from="POP-O-Detector" to="spO" method="_on_POPODetector_body_exited"]
[connection signal="body_exited" from="POP-O-Detector" to="." method="_on_POPODetector_body_exited"]
[connection signal="body_entered" from="POP-P2-Detector" to="spP2" method="_on_POPP2Detector_body_entered"]
[connection signal="body_entered" from="POP-P2-Detector" to="." method="_on_POPP2Detector_body_entered"]
[connection signal="body_exited" from="POP-P2-Detector" to="spP2" method="_on_POPP2Detector_body_exited"]
[connection signal="body_exited" from="POP-P2-Detector" to="." method="_on_POPP2Detector_body_exited"]
[connection signal="body_entered" from="Bucket" to="Block8" method="_on_Bucket_body_entered"]
[connection signal="body_entered" from="Bucket" to="FallingBlock" method="_on_Bucket_body_entered"]
[connection signal="body_entered" from="Bucket" to="." method="_on_Bucket_body_entered"]
[connection signal="body_entered" from="Planks1" to="Planks1" method="_on_Planks1_body_entered"]
